Fix ColorMask state management in validating command decoder.

GLES2DecoderImpl::ClearLevelUsingGL was bypassing ContextState's
management of the color mask, causing the wrong color mask to be
used, and the RGB-on-RGBA emulation for WebGL's back buffer on
macOS to break.

Tested by new WebGL conformance test in:
https://github.com/KhronosGroup/WebGL/pull/2751

Bug: 911918
Change-Id: I255b11915af8ed3ddb7adfa64d7667b32c3be2df
Reviewed-on: https://chromium-review.googlesource.com/c/1366923
Reviewed-by: Victor Miura <vmiura@chromium.org>
Commit-Queue: Kenneth Russell <kbr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#615348}
Former-commit-id: 5fe432ffc97808da0d270c97dc08756758a23e4d